--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -2,7 +2,7 @@ button {
     cursor: pointer;
     font: inherit;
     border: none;
-    background-color: #4d1601;
+    background-color: #800ace;
     color: white;
     padding: 0.75rem 3rem;
     display: flex;
@@ -14,7 +14,7 @@ button {
   
   .button:hover,
   .button:active {
-    background-color: #2c0d00;
+    background-color: #c315e6;
   }
   
   .icon {
@@ -24,7 +24,7 @@ button {
   }
   
   .badge {
-    background-color: #b94517;
+    background-color: #b80acf;
     padding: 0.25rem 1rem;
     border-radius: 25px;
     margin-left: 1rem;
@@ -33,7 +33,7 @@ button {
   
   .button:hover .badge,
   .button:active .badge {
-    background-color: #92320c;
+    background-color: #9401f7;
   }
   
   .bump {
